--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,37 @@
-# Compiled class file
-*.class
-
-# Log file
+.gradle
+build
+.metadata
+bin/
+tmp/
+logs/
 *.log
+*.tmp
+*.bak
+*.swp
+*~.nib
+.settings/
+.loadpath
+.recommenders
+.classpath
+# External tool builders
+.externalToolBuilders/
 
-# BlueJ files
-*.ctxt
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Java annotation processor (APT)
+.factorypath
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# PDT-specific (PHP Development Tools)
+.buildpath
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Uncomment this line if you wish to ignore the project description file.
+.project
+/gradle.properties
