--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'net.nemerosa.versioning' version '2.8.2'
 }
 
 repositories {
@@ -21,4 +22,23 @@ dependencies {
 
 application {
     mainClass = 'eu.apuseni.discbot.App'
+    applicationDefaultJvmArgs = ['-Xmx256M'"]
+}
+
+
+
+jar {
+  manifest {
+    attributes(
+      'Main-Class'     : application.mainClass,
+      'Class-Path'     : configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
+      'Built-By'       : System.properties['user.name'],
+      'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd' 'HH:mm:ss.SSSZ").format(new Date()),
+      'Build-Revision' : versioning.info.build,
+      'Build-Version'  : versioning.info.display,
+      'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+      'Build-Os'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
+      'Created-By'     : "Gradle ${gradle.gradleVersion}",                
+    )
+  }
 }
