--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,15 @@ repositories {
 dependencies {
 
     implementation 'com.discord4j:discord4j-core:3.1.5'
-
     implementation 'software.amazon.awssdk:s3:2.16.87'
     implementation 'software.amazon.awssdk:sqs:2.16.87'
+    
+    implementation group: 'org.tinylog', name: 'tinylog-api', version: '2.2.1'
+    implementation group: 'org.slf4j',   name: 'slf4j-api', version: '1.7.30'
+    implementation group: 'org.tinylog', name: 'slf4j-tinylog', version: '2.2.1'
+    
+    runtimeOnly group: 'org.tinylog', name: 'tinylog-impl', version: '2.2.1'
+    
     testImplementation 'junit:junit:4.13'
 }
 
